# pylogmerge

./: Makefile  README.md  REFACTORING_PRINCIPLES.md  pyproject.toml
.github/: README.md  dependabot.yml
.github/workflows/: build.yml  release.yml
src/logmerge/: __init__.py  constants.py  data_structures.py  file_monitoring.py  logging_config.py  main.py  main_window.py  parsing_utils.py  plugin_utils.py
src/logmerge/dialogs/: __init__.py  add_files.py  column_configuration.py  file_discovery.py  schema_selection.py  simple_dialogs.py
src/logmerge/plugins/: canking_fast_plugin.py  canking_plugin.py  dbglog_plugin.py  worldcan_plugin.py
src/logmerge/widgets/: __init__.py  activity_bar.py  file_list.py  filter_panel.py  log_table.py  panels.py
tests/: README.md  conftest.py
utils/: live_log_generator.py  log_generator.py
